--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,8 +12,9 @@
 body {
     font-family: 'courgette';
     color: black;
-    padding: 0;
-    margin: 0;
+    min-height: 100vh;
+    flex-direction: column;
+    
 }
 
 /*Header*/
@@ -37,6 +38,10 @@ header {
 /*Main content*/
 main {
     background-color: aquamarine;
+    height:100%;
+    width:100%;
+    
+
     
 }
 
