toggle menu inserted menu drops down

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,15 @@ header {
     flex-direction: row;
     width: 100%;
     padding: 0;
-    margin: 0; 
+    margin: 0;
+    align-items: baseline;
+    justify-content: space-between;
+}
+/*No underlines on logo or menu */
+
+header a {
+    text-decoration: none;
+    color: inherit;
 }
 
 #logo {
@@ -34,7 +42,24 @@ header {
 
 #menu {
     list-style-type: none;
-    font-size: 70%;
+    font-size: 100%;
+}
+
+/* Making toggle menu*/
+
+nav {
+    position: absolute;
+    background-color: aqua;
+    width: 100%;
+    left:10;
+    top:100%;
+    padding: 0;
+    display:none;
+}
+/*menu dropdown settings*/
+
+#nav-bar:checked~nav {
+    display: block;
 }
 
 /*Main content*/
@@ -79,6 +104,5 @@ footer {
     display: flex;
     text-align: center;
     justify-content: space-evenly;
-    
-      
+    color: inherit;
 }
