--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,13 +80,15 @@ main {
 }
 
 /*tip section*/
-#tip { flex-direction: row;
-    
+
+#tip-content {
+    float: left;
+    padding: 15px;
 }
 #tip-image {
-    display:block;
-    height: 20%;
-    width: 20%;
+    float:right;
+    padding:15px;
+    margin-bottom: 50;
 }
 
 /* Newsletter form*/
