--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,22 +189,47 @@ footer {
 
 header {
     height: 100px;
-    font-size: 40px;
+    font-size: 30px;
     align-items: center;
 }   
 
 /* Lowering main content so not covered by bigger header*/
 
 #about-us {
-    margin-top:120px;
-    height: 300px;
-    font-size: 200%;
+    margin-top: 60px;
+    margin-bottom:0px;
+    height: 150px;
+    
 }
 #about-us h3 {
+    padding-top: 10px;
     text-align: left;
+    font-size: 120%;
 }
 #about-us p {
-    text-align: left;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-align: center;
+    font-size: 100%;
 }
 
+#tip {
+    text-align: center;
+    font-size: 100%;
+    height:290px;
+    padding-top: 10px;
+    padding-bottom: 5px;
+}
+#tip-content {
+    padding-top: 10px;
+}
+/* Make planner picture a circle*/
+#planner {
+    height: 150px;
+    width: 150px;
+    border-radius: 50%;
+    text-align: left;
+    margin-left: 0px;
+    margin-right: 180px;
+}
 }
