--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,6 +99,7 @@ main {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    border-top: 1px solid black;
 }
 #tip-content {
     flex-basis: 200px;
@@ -198,28 +199,35 @@ header {
 #about-us {
     margin-top: 60px;
     margin-bottom:0px;
-    height: 150px;
+    height: 170px;
     
 }
+/* space between text and top of section and H3 placement*/
 #about-us h3 {
     padding-top: 10px;
     text-align: left;
     font-size: 120%;
 }
+/* About us p text styling */
+
 #about-us p {
     padding-top: 10px;
     padding-bottom: 10px;
     text-align: center;
     font-size: 100%;
 }
+/*tip section spacing styling*/
 
 #tip {
     text-align: center;
     font-size: 100%;
-    height:290px;
+    height:300px;
     padding-top: 10px;
     padding-bottom: 5px;
 }
+
+/* space between text and top of section*/
+
 #tip-content {
     padding-top: 10px;
 }
@@ -232,4 +240,42 @@ header {
     margin-left: 0px;
     margin-right: 180px;
 }
+
+/*Newsletter section*/
+
+#newsletter {
+    height:200px;
+    padding-top: 30px;
+    padding-bottom: 10px;
+}
+/*submit button larger*/
+
+.submit {
+    font-size: 100%;
+    padding:5px;
+    margin-top: 20px;
+}
+
+#newsletter h3 {
+    padding-top: 0px;
+    padding-bottom: 10px;
+    text-align: center;
+    font-size: 120%;
+
+}
+
+/*footer styling*/
+
+footer {
+    height:100px;
+    padding-top: 10px;
+    align-items: baseline;
+}
+
+/* Social media icons larger and spaced from contact information */
+#social-pages {
+    padding-top: 10px;
+    font-size: 125%;
+}
+
 }
