--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,8 +111,7 @@ main {
 #planner{
     width: 90px;
     height:90px;
-    position: relative;
-    left: -90px;
+    border-radius: 50%;
     
 }
 
@@ -295,7 +294,35 @@ footer {
     font-size: 150%;
     text-align: center;
     justify-content: space-between;
-
 }
 
+/*tip section spacing styling*/
+
+#tip {
+    text-align: center;
+    font-size: 100%;
+    height: 300px;
+    padding-top: 10px;
+    padding-bottom: 5px;
 }
+
+/* space between text and top of section*/
+
+#tip-content {
+    padding-top: 10px;
+}
+
+/* Make planner picture a circle*/
+#planner {
+    height: 150px;
+    width: 150px;
+    border-radius: 50%;
+    text-align: left;
+    margin-left: 0px;
+    margin-right: 180px;
+}
+    
+
+    
+}
+
