--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -237,8 +237,6 @@ header {
     width: 150px;
     border-radius: 50%;
     text-align: left;
-    margin-left: 0px;
-    margin-right: 180px;
 }
 
 /*Newsletter section*/
@@ -301,7 +299,7 @@ footer {
 #tip {
     text-align: center;
     font-size: 100%;
-    height: 300px;
+    height: 400px;
     padding-top: 10px;
     padding-bottom: 5px;
 }
@@ -321,8 +319,43 @@ footer {
     margin-left: 0px;
     margin-right: 180px;
 }
-    
+/* Newsletter section 768px up */
 
+#newsletter {
+    height: 200px;
+    padding-top: 30px;
+    padding-bottom: 10px;
+}
+
+/*submit button larger*/
+
+.submit {
+    font-size: 100%;
+    padding: 5px;
+    margin-top: 20px;
+}
+
+#newsletter h3 {
+    padding-top: 0px;
+    padding-bottom: 10px;
+    text-align: center;
+    font-size: 120%;
+
+}
+/*footer styling*/
+
+footer {
+    height: 200px;
+    padding-top: 10px;
+    font-size: 200%;
+    align-items: baseline;
+}
+
+/* Social media icons larger and spaced from contact information */
+#social-pages {
+    
+    font-size: 140%;
+}
     
 }
 
