--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,8 +24,8 @@ header {
     display: flex;
     flex-direction: row;
     width: 100%;
-    padding: 0px,15px;
-    margin: 0px,15px;
+    padding: 0px;
+    margin: 0px;
     align-items:center;
     justify-content:flex-start;
 }
