--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,14 +214,21 @@ footer {
 
 header {
     height: 100px;
-    font-size: 30px;
-    align-items: center;
+    font-size: 25px;
+    align-items:center;
 }   
+
+.nav-bar-label {
+    text-align: right;
+    font-size: 120%;
+    padding-left: 180px;
+    margin-left: 180px;
+}
 
 /* Lowering main content so not covered by bigger header*/
 
 #about-us {
-    margin-top: 60px;
+    margin-top: 10px;
     margin-bottom:0px;
     height: 170px;
     
@@ -260,7 +267,7 @@ header {
     height: 150px;
     width: 150px;
     border-radius: 50%;
-    text-align: left;
+    flex: content;
 }
 
 /*Newsletter section*/
