--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -227,25 +227,26 @@ header {
 
 /* Lowering main content so not covered by bigger header*/
 
-#about-us {
-    margin-top: 10px;
-    margin-bottom:0px;
-    height: 170px;
     
 }
 /* space between text and top of section and H3 placement*/
 #about-us h3 {
-    padding-top: 10px;
+    padding-top: 5px;
     text-align: left;
-    font-size: 120%;
+    font-size: 150%;
 }
 /* About us p text styling */
 
 #about-us p {
     padding-top: 10px;
     padding-bottom: 10px;
+    padding-left:10px;
     text-align: center;
-    font-size: 100%;
+    font-size: 120%;
+}
+
+#about-us-image {
+    margin-right: 0px;
 }
 /*tip section spacing styling*/
 
