--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,7 +143,7 @@ main {
 /* Image and boarder*/
 
 #newsletter { 
-    background-color: #F2F2F8;
+    background-color: #ffffff;
     text-align: center;
     border-top: 1px solid black;
     
@@ -251,24 +251,25 @@ header {
 /*tip section spacing styling*/
 
 #tip {
-    text-align: center;
     font-size: 100%;
     height:300px;
     padding-top: 10px;
     padding-bottom: 5px;
+    padding-left: 10px;
 }
 
 /* space between text and top of section*/
 
 #tip-content {
-    padding-top: 10px;
+    
+ column-count: 3;
 }
 /* Make planner picture a circle*/
+
 #planner {
     height: 150px;
     width: 150px;
-    border-radius: 50%;
-    flex: content;
+    border-radius: 50%;   
 }
 
 /*Newsletter section*/
