--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -225,12 +225,9 @@ footer {
         margin-left: 180px;
     }
 
-    /* Lowering main content so not covered by bigger header*/
-
-
-
 
 /* space between text and top of section and H3 placement*/
+
 #about-us h3 {
     padding-top: 5px;
     text-align: left;
@@ -314,6 +311,8 @@ footer {
     font-size: 125%;
 }
 
+}
+
 /*Media query for screens min of 768px*/
 
 @media screen and (min-width: 768px) {
@@ -379,6 +378,122 @@ footer {
         width: 150px;
         border-radius: 50%;
         margin-top: 50px;
+    }
+
+    /* Newsletter section 768px up */
+
+    #newsletter {
+        height: 300px;
+        padding-top: 30px;
+        padding-bottom: 30px;
+        font-size: 125%;
+    }
+
+    /*submit button larger*/
+
+    .submit {
+        font-size: 125%;
+        padding: 5px;
+        margin-top: 20px;
+    }
+
+    #newsletter h3 {
+        padding-top: 0px;
+        padding-bottom: 40px;
+        text-align: center;
+        font-size: 150%;
+
+    }
+
+    /*footer styling*/
+
+    footer {
+        height: 165px;
+        padding-bottom: 80px;
+        font-size: 200%;
+        align-items: baseline;
+    }
+
+    /* Social media icons larger and spaced from contact information */
+    #social-pages {
+        font-size: 140%;
+        padding-bottom: 0px;
+        margin-bottom: 0px;
+
+    }
+}
+/*large screen sizes 992px up*/
+
+@media screen and (min-width: 992px) {
+    header {
+        height:fit-content;
+    }
+
+    #logo {
+        padding-right: 200px;
+
+    }
+
+    .nav-bar-label {
+        text-align: right;
+        font-size: 120%;
+        padding-left: 180px;
+        margin-left: 400px;
+    }
+
+    #about-us {
+        margin-top: 50px;
+    }
+
+    #about-us p {
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-left: 10px;
+        text-align: center;
+        font-size: 150%;
+    }
+
+    #about-us-image {
+        margin: 0px;
+        padding: 0px;
+        height: auto;
+        max-width: 150%;
+    }
+
+    /*tip section spacing styling*/
+
+    #tip {
+        text-align: center;
+        font-size: 100%;
+        height: 400px;
+        padding-top: 10px;
+        padding-bottom: 5px;
+    }
+
+    #monthly {
+        font-size: 160%;
+        text-align: left;
+        padding-right: 320px;
+        margin-right: 320px;
+    }
+
+    /* space between text and top of section*/
+
+    #tip-content {
+        padding-top: 10px;
+        font-size: 160%;
+        column-count: 2;
+        column-width: 20px;
+        column-gap: 50px;
+        margin: 50px;
+    }
+
+    /* Make planner picture a circle*/
+    #planner {
+        height: 150px;
+        width: 150px;
+        border-radius: 50%;
+        margin-top: 15px;
     }
 
     /* Newsletter section 768px up */
