--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -323,23 +323,36 @@ footer {
         font-size: 400%;
 
     }
-
     .nav-bar-label {
-        text-align: right;
-        font-size: 120%;
-        padding-left: 180px;
-        margin-left: 400px;
+        display: none;
     }
 
-  #about-us p {
+    nav {
+        font-size: 100%;
+        color: black;
+        display:block;
+        position: relative;
+        background-color: #ffffff;
+    }
+
+    #menu >li {
+        display: inline-block;
+        text-align: center;
+        margin-left: 150px;
+        margin-right: 20px;
+        padding left: 20px
+        
+    }
+
+    #about-us p {
       padding-top: 10px;
       padding-bottom: 10px;
       padding-left: 10px;
       text-align: center;
       font-size: 120%;
-  }
+    } 
 
-  #about-us-image {
+     #about-us-image {
       margin: 0px;
       padding: 0px;
       height: auto;
