--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,26 +18,24 @@ body {
 
 /*Header*/
 header {
-    background-color: #ffffff;
+    background-color:rgb(255, 251, 168);
     border-bottom: 1px solid black;
-    position: fixed;
+    position:relative;
     display: flex;
     flex-direction: row;
     width: 100%;
     padding: 0px;
     margin: 0px;
     align-items:center;
-    justify-content:flex-start;
+    justify-content:space-between;
 }
 /*No underlines on logo or menu */
 
 header a {
     text-decoration: none;
     color: inherit;
-    padding-left: 10px;
+    padding-left: 20px;
 }
-
-
 
 #menu {
     list-style-type: none;
@@ -48,7 +46,7 @@ header a {
 
 nav {
     position:absolute;
-    background-color: #FEDC61;
+    background-color: rgb(255, 251, 168);
     font-size: 100%;
     width: 100%;
     left:0%;
@@ -67,9 +65,8 @@ nav {
 }
 /*nav bar to the right*/
 .nav-bar-label {
-    text-align: right;
-    padding-left: 120px;
     font-size: 180%;
+    padding-right: 40px;
 }
 
 /*Main content*/
@@ -78,7 +75,7 @@ main {
     flex-direction: column;
     width: 100vw;
     height:100vh;
-    padding-top: 100px;
+    padding-top: 0px;
     padding-bottom: 0px;
     overflow: auto;
 }
@@ -87,49 +84,44 @@ main {
 
 #about-us {
     background-color: #ffffff;
-    text-align: center;
     margin-top: 0px;
     padding: 0px;
     padding-bottom:5px;
+    padding-left: 5px;
+    text-align: center;
 }
  /* Losing white space between header and main content*/
 #about-us h3 {
     margin-top: 0px;
-    padding-left: 10px;
-    padding-bottom: 10px;
-    text-align: left;   
+    padding-bottom: 5px;
+    font-size: 180%;
 }
 
 /* side by side layout for about us content including image*/
-#about-us{
-    column-count: 2;
-    padding-top: 10px;
-    font-size: 80%;
+#about-us-text{
+    padding-top: 5px;
+    font-size: 90%;
 }
 
-/*Image in about us section positioned and sized to fit */
-
-#about-us-image {
-    height: 30%;
-    width:30%;
-    margin-top: 100px;
-    margin-right: 20px;
-    margin-left: 0px;
-    
-}
 /*tip section*/
 
 #tip {
-    
-    background: url('../images/pexels-photo-6489663.jpeg') no-repeat center/cover;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     border-top: 1px solid black;
+    background-color: rgb(255, 251, 168);
+}
+
+#tip h3 {
+    font-size: 180%;
+    padding-bottom: 5px;
 }
 #tip-content {
     flex-basis: 200px;
     flex-grow: 1;
+    font-size: 90%;
+    text-align: center;
 }
 /*Image wih link style*/
 
@@ -166,14 +158,14 @@ main {
 .submit {
     border-radius: 2px;
     border: 1px solid black;
-    background-color: #FEDC61;
+    background-color:rgb(255, 251, 168);
     margin-bottom: 5px;
     font-weight: bold;
 }
 
 /*Footer*/
 footer {
-    background-color: #FEDC61;
+    background-color: rgb(255, 251, 168);
     position: relative;
     top:0;
     left: 0;
@@ -207,9 +199,9 @@ footer {
 }
 
 /* Media Queries Below */
-/* Media Query for screens 530px and up) */
+/* Media Query for screens 540px and up) */
 
-@media screen and (min-width: 530px) {
+@media screen and (min-width: 540px) {
 
     /* Make header a better size for larger screen*/
 
@@ -231,8 +223,8 @@ footer {
 
 #about-us h3 {
     padding-top: 5px;
-    text-align: left;
-    font-size: 150%;
+    text-align: center;
+    font-size: 200%;
 }
 
 /* About us p text styling */
@@ -240,9 +232,10 @@ footer {
 #about-us p {
     padding-top: 10px;
     padding-bottom: 10px;
-    padding-left: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
     text-align: center;
-    font-size: 120%;
+    font-size: 140%;
 }
 
 #about-us-image {
@@ -255,18 +248,21 @@ footer {
 /*tip section spacing styling*/
 
 #tip {
-    font-size: 100%;
     height: 300px;
     padding-top: 10px;
     padding-bottom: 5px;
     padding-left: 10px;
 }
 
+#tip h3 {
+    font-size: 200%;
+    text-align: center;
+    padding-bottom: 5px;
+
 /* space between text and top of section*/
 
 #tip-content {
-
-    column-count: 3;
+    font-size: 140px;
 }
 
 /* Make planner picture a circle*/
