--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -366,36 +366,24 @@ footer {
     /*tip section spacing styling*/
 
     #tip {
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-left: 20px;
+        padding-right: 20px;
         text-align: center;
-        font-size: 100%;
-        height: 400px;
-        padding-top: 10px;
-        padding-bottom: 5px;
-    }
-
-    #monthly {
-        font-size: 120%;
-        text-align: left;
-        padding-right: 320px;
-        margin-right: 320px;
-    }
-    /* space between text and top of section*/
-
-    #tip-content {
-        padding-top: 10px;
-        font-size: 100%;
-        column-count: 2;
-        column-width: 20px;
-        column-gap: 50px;
-        margin: 50px;
-    }
+        font-size: 140%;
+        }
+    
+    #tip h3 {
+        font-size: 140%;
+        }
 
     /* Make planner picture a circle*/
     #planner {
         height: 150px;
         width: 150px;
         border-radius: 50%;
-        margin-top: 50px;
+        margin-top: 5px;
     }
 
     /* Newsletter section 768px up */
